# fABBA

./: .gitattributes  .readthedocs.yaml  .travis.yml  CITATION.bib  LICENSE  README.md  README.rst  auto_config.sh  cython_setup.py  instruct.ipynb  pyproject.toml  requirements.txt  run_docker.sh  runtest.py  setup.cfg  setup.py
.ipynb_checkpoints/: instruct-checkpoint.ipynb
conda/: recipe.yaml
cpp/: ABBA.h  ABBA.i  DTW.cpp  benchmark_test.csv  compress.h  csv_reader.h  digitization.h  dynamicTimeWarping.h  functionTest.cpp  global_func.h  operator_loader.h  parameters_test.cpp  performance.csv  reconstruction.h  reconstruction_test.cpp  runtime  runtime.cpp  sorting_test  sorting_test.cpp  toydata.h  toydata_test  toydata_test.cpp
docker/: Dockerfile
egg-info/: PKG-INFO  SOURCES.txt  requires.txt
example/: instruct.ipynb
exp/: aggExp.ipynb  clustering_com.ipynb  count_rate_1norm.ipynb  count_rate_2norm.ipynb  count_rate_lexi.ipynb  demo.ipynb  examples.py  image_compress.py  k_error.py  normalization.py  rel_error_avg.py  run_variants_profiles.ipynb  save.ipynb  sensitivity.ipynb  testWCSS.ipynb  tol_error.py  ucr_lstm_test.ipynb
experiments/: aggExp.ipynb  clustering_com.ipynb  count_rate_1norm.ipynb  count_rate_2norm.ipynb  draft.ipynb  fABBA_check.ipynb  save.ipynb  sensitivity.ipynb  testWCSS.ipynb
fABBA/: __init__.py  aggregation_c.c  aggregation_memview.c  aggregation_memview.pyx  caggregation.c  caggregation.cp38-win_amd64.pyd  caggregation_memview.cp38-win_amd64.pyd  chainApproximation_c.c  chainApproximation_c.cp38-win_amd64.pyd  compile.ipynb  digitization.py  fabba.py  fabba_agg.py  fabba_agg_memview.c  fabba_agg_memview.pyx  fkmns.py  inverse_t.py  inverse_tc.c  inverse_tc.pyx  load_datasets.py  qabba.py  setup.py  storage.py  (+1 more)
fABBA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+150 files in other folders)
