[build-system]
requires = [
    "setuptools>=65",
    "wheel",
    "cython>=0.29",
    "numpy>=1.20"
]
build-backend = "setuptools.build_meta"


[project]
name = "fABBA"
version = "1.4.3"  # overwritten dynamically via setup.cfg's version-file
description = "An efficient symbolic time series approximation with ABBA."
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "BSD-3-Clause" }
authors = [
  {name = "Xinye Chen", email = "xinye.chen@manchester.ac.uk"},
  {name = "Stefan Güttel", email = "stefan.guettel@manchester.ac.uk"}
]

dependencies = [
    "numpy>=1.3.0",
    "scipy>=0.7.0",
    "requests",
    "pandas",
    "scikit-learn",
    "joblib>=1.1.1",
    "matplotlib"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["fABBA*"]

[tool.setuptools.package-data]
fABBA = ["jabba/data/*.npy", "jabba/data/*.arff"]

[tool.setuptools.dynamic]
version = {file = "fABBA/__init__.py"}
