[metadata]
name = fABBA
description = An efficient aggregation method for symbolic representation of temporal data
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
author = Xinye Chen, Stefan Güttel
url = https://github.com/nla-group/fABBA

[options]
packages = find:
include_package_data = True

[options.packages.find]
include = fABBA*

[options.package_data]
fABBA = 
    jabba/data/*.npy
    jabba/data/*.arff
